--- a/zainoo/css/style.css
+++ b/zainoo/css/style.css
@@ -202,11 +202,11 @@ body._lock {
 /*===========================================*/
 
 ._modal {
-  width: 110%;
+  width: 100%;
   height: 100vh;
   position: fixed;
   z-index: 10;
-  left: -40px;
+  left: 0;
   top: 0;
   opacity: 0;
   visibility: hidden;
@@ -500,6 +500,8 @@ main {
 .slide-main-slider__text {
   color: #000000;
   opacity: 0.4;
+  line-height: 32px;
+  font-weight: 200;
 }
 
 .slide-main-slider__buttons {
@@ -525,6 +527,7 @@ main {
       -ms-flex: 0 0 45%;
           flex: 0 0 45%;
   font-size: 0.9375rem;
+  font-weight: 500;
   font-family: "Montserrat", "SofiaPro", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -820,6 +823,12 @@ main {
 
   .aside__slider {
     display: none;
+  }
+}
+
+@media (max-width: 29.6875em) {
+  .slide-main-slider__content {
+    text-align: center;
   }
 }
 
